--- a/Portfolio3/datasim.Rmd
+++ b/Portfolio3/datasim.Rmd
@@ -18,16 +18,11 @@ pacman::p_load(tidyverse,
                loo, job)
 ```
 
-Specifying functions:
-Be aware that the structure of the outcome should match the experiment: chose number 1-8. 
-We can either rescale it to be 0-1, or a continous scale (maybe truncated), 
 
-bias is the mean/mode (shape 1) of the $\beta$ distribution -> the location parameter (it is the value you would pick anytime without any other sources )
+### the very first functions 
+these needs alteration to match the data of the experiment 
 
-also have the precision parameter (shape 2) (we dont fit this )
-
-
-#### choices of distributions  
+#### choices and considerations 
 -\ we are to model a choice between 1-8 in a categorical yet ordinal way (ordered logistic stan user guide)
 -\ another way: turning the 1-8 to a 0-1 scale excluding 0 and 1 (plot the transformation to be sure)
     -\ now this is just a $\beta$ distribution
@@ -37,6 +32,12 @@ also have the precision parameter (shape 2) (we dont fit this )
   Kind of not nice about this: we then end up with a model were a source1 rating = 6 and a source2 rating = 6, will give a new rating of above six, do to the logit spaces (this is if you are both above the middle of the distribution (like a bias of 4.5 fx))
   
   no matter what we choose, discuss the limitation of the chosen distribution and how other may have worked, and maybe also discuss whether this is just inherited issues in Bayes simple model 
+
+*Specifying functions:*
+Be aware that the structure of the outcome should match the experiment: chose number 1-8. 
+We can either rescale it to be 0-1, or a continous scale (maybe truncated), 
+
+bias is the mean/mode (shape 1) of the $\beta$ distribution -> the location parameter (it is the value you would pick anytime without any other sources ) - also have the precision parameter (shape 2) (we dont fit this)
 
 ```{r}
 ## source 1 = own choice
@@ -114,6 +115,7 @@ Simple_Bayes_US <- function(n, lower_bound = 1, upper_bound = 8, bias_own, bias_
   
   # Generate beliefs using the beta distribution
   updated_beliefs <- rbeta(n, beta_shape1, beta_shape2) # between 0-1
+  dataframe$updated_beliefs <- updated_beliefs
   
   # Predict the SecondRating using a binomial distribution
   dataframe$SecondRating_predicted <- lower_bound + rbinom(n, upper_bound - lower_bound, updated_beliefs)
@@ -123,12 +125,22 @@ Simple_Bayes_US <- function(n, lower_bound = 1, upper_bound = 8, bias_own, bias_
 }
 ```
 
+
+*explanation to the plot can be found below ...*
 ```{r}
 df_us<- Simple_Bayes_US(n=1000, lower_bound = 1, upper_bound = 8, bias_own=0.5,bias_group=0.5)
 unique(df_us$SecondRating_predicted)
+
+hist(df_us$updated_beliefs)
+hist(df_us$FirstRating)
+hist(df_us$GroupRating)
+hist(df_us$SecondRating_predicted)
 ```
 
 ```{r}
+#############################################################################################
+################################           SIMPLE BAYES           #########################
+#############################################################################################
 ################################################################################################
 # here we use the logit setup known from the bayes model presented in class, we do so
 # beacuse it is easier to implement a weigth parameter here. 
@@ -147,89 +159,44 @@ Simple_Bayes_logit <- function(n, lower_bound = 1, upper_bound = 8, bias_own, bi
   dataframe$FirstRating_s1 <- lower_bound + rbinom(n, upper_bound - lower_bound, bias_own)
   dataframe$GroupRating_s2 <- lower_bound + rbinom(n, upper_bound - lower_bound, bias_group)
   
-  # Generate FirstRating and GroupRating based on binomial distribution
-  dataframe$scaled_FirstRating_s1 <- (dataframe$FirstRating_s1+1)/10
-  dataframe$scaled_GroupRating_s2 <- (dataframe$GroupRating_s2+1)/10
+  for (t in 1:n){
   
-  # Generate beliefs using the beta distribution
-  dataframe$updated_beliefs <- inv_logit_scaled(bias_own + logit_scaled(dataframe$scaled_FirstRating_s1)+logit_scaled(dataframe$scaled_GroupRating_s2)) 
-  
-  # Predict the SecondRating using a binomial distribution
-  dataframe$SecondRating_predicted <- lower_bound + rbinom(n, upper_bound - lower_bound, dataframe$updated_beliefs)
-  
+    # Generate FirstRating and GroupRating based on binomial distribution
+    dataframe$scaled_FirstRating_s1[t] <- (dataframe$FirstRating_s1+1)/10
+    dataframe$scaled_GroupRating_s2[t] <- (dataframe$GroupRating_s2+1)/10
+    
+    # Generate beliefs using the beta distribution (this is what affected by weigths)
+    dataframe$updated_beliefs[t] <- inv_logit_scaled(bias_own + logit_scaled(dataframe$scaled_FirstRating_s1[t])+logit_scaled(dataframe$scaled_GroupRating_s2[t])) 
+    
+    # Predict the SecondRating using a binomial distribution
+    dataframe$SecondRating_predicted[t] <- lower_bound + rbinom(n, upper_bound - lower_bound, dataframe$updated_beliefs[t])
+    
+
+    }
   # Return the updated dataframe
   return(dataframe)
 }
 ```
 
-
-```{r}
-hist(log_df$updated_beliefs)
-hist(log_df$SecondRating_predicted)
-hist(log_df$GroupRating_s2)
-hist(log_df$FirstRating_s1)
-```
-```{r}
-Simple_Bayes_logit <- function(n, lower_bound = 1, upper_bound = 8, bias_own, bias_group) {
-  
-  # Initialize the dataframe with trial numbers
-  dataframe <- data.frame(trials = seq(1, n))
-  
-  # Generate FirstRating and GroupRating based on binomial distribution
-  dataframe$FirstRating_s1 <- lower_bound + rbinom(n, upper_bound - lower_bound, bias_own)
-  dataframe$GroupRating_s2 <- lower_bound + rbinom(n, upper_bound - lower_bound, bias_group)
-  
-  # Generate FirstRating and GroupRating based on binomial distribution
-  dataframe$scaled_FirstRating_s1 <- (dataframe$FirstRating_s1+1)/10
-  dataframe$scaled_GroupRating_s2 <- (dataframe$GroupRating_s2+1)/10
-  
-  # Generate beliefs using the beta distribution
-  dataframe$updated_beliefs <- inv_logit_scaled(bias_own + logit_scaled(dataframe$scaled_FirstRating_s1)+logit_scaled(dataframe$scaled_GroupRating_s2)) 
-  
-  # Predict the SecondRating using a binomial distribution
-  dataframe$SecondRating_predicted <- lower_bound + rbinom(1, upper_bound - lower_bound, dataframe$updated_beliefs)
-  
-  # Return the updated dataframe
-  return(dataframe)
-}
-
-
-# Loop for 25 agents
-for(agent in 1:25) {
-  
-  # Define biases or other parameters specific to each agent if needed
-  bias_own_agent_specific <- 0.5  
-  bias_group_agent_specific <- 0.5  
-  
-  # Nested loop for executing the function over 100 trials for the current agent
-  for(trials in 1:100) {
-    
-    # Call the Simple_Bayes_logit function for the current set of trials and agent-specific biases
-    agent_data <- Simple_Bayes_logit(n = trials, 
-                                     lower_bound = 1, 
-                                     upper_bound = 8, 
-                                     bias_own = bias_own_agent_specific, 
-                                     bias_group = bias_group_agent_specific)
-  }
-}
-    
-```
-
-
-```{r}
+```{r, warning=FALSE}
 log_df <- Simple_Bayes_logit(n=1000, lower_bound = 1, upper_bound = 8, bias_own=0.5,bias_group=0.5)
-
-
 unique(df_us$SecondRating_predicted)
 
 ```
 
+**what we see in the hists below is that this bayes version treats the trustworthiness as a binary outcome - by this the second rating will increase if the group rating and the first rating are above the mid value of all possible ratings. This means that a group rating of 6 and a first rating of 7 will potentially lead to a second rating of 8 - which conceptually maybe not makes sense, as we may expect for people to lower their rating if the group does so. this might be conceptually explained by letting it represent a certainty in the rating that are now considered binary.**
 ```{r}
-n=100
-lower_bound = 1
-upper_bound = 8
-bias_own =.5
-bias_group=.5
+hist(log_df$updated_beliefs)
+hist(log_df$FirstRating_s1)
+hist(log_df$GroupRating_s2)
+hist(log_df$SecondRating_predicted)
+```
+
+```{r}
+#############################################################################################
+################################           WEIGHTED BAYES           #########################
+#############################################################################################
+W_Bayes_logit <- function(n, lower_bound = 1, upper_bound = 8, bias_own, bias_group, w1, w2) {
   
   # Initialize the dataframe with trial numbers
   dataframe <- data.frame(trials = seq(1, n))
@@ -238,77 +205,37 @@ bias_group=.5
   dataframe$FirstRating_s1 <- lower_bound + rbinom(n, upper_bound - lower_bound, bias_own)
   dataframe$GroupRating_s2 <- lower_bound + rbinom(n, upper_bound - lower_bound, bias_group)
   
-  # Generate FirstRating and GroupRating based on binomial distribution
-  dataframe$scaled_FirstRating_s1 <- (dataframe$FirstRating_s1+1)/10
-  dataframe$scaled_GroupRating_s2 <- (dataframe$GroupRating_s2+1)/10
+  for (t in 1:n){
+  
+    # Generate FirstRating and GroupRating based on binomial distribution
+    dataframe$scaled_FirstRating_s1[t] <- (dataframe$FirstRating_s1[t]+1)/10
+    dataframe$scaled_GroupRating_s2[t] <- (dataframe$GroupRating_s2[t]+1)/10
+    
+    # Generate beliefs using the beta distribution (this is what affected by weigths)
+    dataframe$updated_beliefs[t] <- inv_logit_scaled(bias_own + w1*logit_scaled(dataframe$scaled_FirstRating_s1[t])+w2*logit_scaled(dataframe$scaled_GroupRating_s2[t])) 
+    
+    # Predict the SecondRating using a binomial distribution
+    dataframe$SecondRating_predicted[t] <- lower_bound + rbinom(n, upper_bound - lower_bound, dataframe$updated_beliefs[t])
+    
+  
+  }
+  # Return the updated dataframe
+  return(dataframe)
+}
 ```
 
 
 
-```{r}
-# lower_bound + rbinom(total_obs, upper_bound - lower_bound, updated_beliefs)
-first_rating <- 1 + rbinom(100, 8 - 1, 0.5)
-first_rating
-group_rating <- 1 + rbinom(100, 8 - 1, 0.1)
-group_rating
+```{r, warning=FALSE}
+dat_w <- W_Bayes_logit(100, 1, 8, 0.5, 0.6, 0.3, 0.8)
 
-?rbinom
+unique(dat_w$SecondRating_predicted)
+
+hist(dat_w$updated_beliefs)
+hist(dat_w$FirstRating)
+hist(dat_w$GroupRating)
+hist(dat_w$SecondRating_predicted)
 ```
-
-
-```{r}
-
-```
-
-
-```{r}
-df <- second_rating_beta_bayes_ft(data1)
-```
-
-
-Using functions to simulate data for *153 trials*
-```{r}
-trials = c(1:153)
-
-hist(rtruncnorm(153, a=1, b=8, mean = 4, sd = 3))
-
-```
-
-
-
-
-```{r}
-#logit_scaled(4)
-personal_bias <- 0
-w1 <- .9
-w2 <- .3
-Source1 <- .5
-Source2 <- .8
-
-inv_logit_scaled(personal_bias + w1*logit_scaled(Source1) + w2*logit_scaled(Source1))
-
-```
-
-```{r}
-personal_bias <- -3
-w1 <- .05
-w2 <- .05
-Source1 <- .1
-Source2 <- .1
-
-inv_logit_scaled(personal_bias + w1*logit_scaled(Source1) + w2*logit_scaled(Source1))
-
-```
-
-
-
-
-
-
-
-
-
-
 
 
 
